syntax = "proto2";
option optimize_for = CODE_SIZE;
 
package fnv.soa.gateway;
 
/**
* @fnv_proto
* SOA message wrapper to wrap the SOA message to be passed over to SOA Gateway 
* @fnv_topic This GPB is used over the IPC interface and does not use SOA messaging
* @fnv_scope ECG_INTERNAL
* @fnv_api_source INTERNAL
* @fnv_message_version 1.0
*/
message SoaMessageWrapper {
    required bytes SoaMessage = 1;
}
